# intrude-bot

./: .gitignore  Cargo.toml  config.yml
src/: bot.rs  main.rs  models.rs
src/plugins/: archive.rs  echo.rs  hokp.rs  integral.rs  mod.rs  question.rs  randint.rs  repeat.rs  sauce.rs
src/sql/: schema.sql
