[package]
name = "intrude-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.57"
chrono = "0.4.22"
confy = "0.4.0"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.20.1", features = ["full"] }
toml = "0.5.9"
